--- a/tsaclogger-api/config/packages/security.yaml
+++ b/tsaclogger-api/config/packages/security.yaml
@@ -28,8 +28,9 @@ security:
             jwt: ~
 
     access_control:
-        - { path: ^/api/login, roles: PUBLIC_ACCESS }
-        - { path: ^/api,       roles: ROLE_USER }
+        - { path: ^/api/login,      roles: PUBLIC_ACCESS }
+        - { path: ^/api,            roles: ROLE_USER }
+        - { path: ^/api/new_route,  roles: ROLE_ADMIN }
         
         # main:
         #     lazy: true
